--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,12 @@
 			<artifactId>transactions-jta</artifactId>
 			<version>6.0.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.8.1</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.atomikos</groupId>
@@ -97,6 +102,12 @@
 			<groupId>com.atomikos</groupId>
 			<artifactId>transactions-jms</artifactId>
 			<version>6.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>7.0.1.Final</version>
 		</dependency>
 
 		<dependency>
@@ -178,6 +189,33 @@
 		</dependency>
 
 	</dependencies>
+
+
+	
+
+	<!-- <build>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build> -->
 
 
 </project>
