--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,17 @@
 			<version>6.0.0</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>7.0.1.Final</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency> -->
+
 
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
